[package]
name = "delvers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
serde = { version ="1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
